Fixed positioning on mobile

--- a/public_html/assets/css/main.css
+++ b/public_html/assets/css/main.css
@@ -245,7 +245,7 @@ p {
 }
 
 @media screen and (max-width: 768px) {
-    .bgimg2 {
+    .fh5co-hero {
         height: 70%;
     }
 }
